[project]
name = "dot_vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "returns[compatible-mypy]>=0.26.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "hatch>=1.15.1",
    "mypy>=1.17.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["src/"]

[tool.basedpyright]
include = ["src"]
executionEnvironments = [
    {root = "src"}
]

[tool.mypy]
plugins = [
    "mypy.plugins.proper_plugin",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov=dot_vault src/tests/"
testlog = """
    pytest \
        --no-header \
        --log-level=DEBUG --log-cli-level=DEBUG \
        --capture=no \
        src/tests/{args}
"""
typecheck = "ty check"
check = [
    "hatch run test",
    "hatch run typecheck"
]
