[project]
name = "dot_vault"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "returns[compatible-mypy]>=0.26.0",
]

[dependency-groups]
dev = [
    "hatch>=1.15.1",
    "ipython>=9.7.0",
    "mypy>=1.17.1",
    "pyrefly>=0.42.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = ["src/"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov=dot_vault src/tests/"
testlog = """
    pytest \
        --no-header \
        --log-level=DEBUG --log-cli-level=DEBUG \
        --capture=no \
        src/tests/{args}
"""
lint = "ruff check"
typecheck-mypy = "mypy src"
typecheck-pyrefly = "pyrefly check"
typecheck = [
    "typecheck-mypy",
    "typecheck-pyrefly"
]
check = [
    "hatch run test",
    "hatch run typecheck",
    "hatch run lint"
]

[tool.pyrefly]
project-includes = ["src"]
search-path = ["src"]
python-interpreter-path = ".venv/bin/python3"

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pytest.*", "pytest_mock.*"]
follow_untyped_imports = true
ignore_missing_imports = true
